--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,11 +1,15 @@
+.cards-section {
+  margin-top: 20px;
+}
+
 .card {
   background-size: cover;
   background-position: center;
-  height: 300px; /* Adjust based on your preference */
+  height: 300px;
   flex: 1;
   margin: 10px;
   position: relative;
-  cursor: pointer; /* To indicate that the card is clickable */
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,7 +17,7 @@
 
 .card-content {
   color: white;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 20px;
   text-align: center;
 }
@@ -23,4 +27,10 @@
   .card {
       height: 200px;
   }
+}
+
+@media (max-width: 768px) {
+  /* .card {
+ 
+  } */
 }
