--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,5 +1,6 @@
 .cards-section {
   margin-top: 20px;
+  align-items: start;
 }
 
 .card {
@@ -15,6 +16,11 @@
   justify-content: center;
 }
 
+.card:hover {
+  transform: scale(1.01);
+  transition: all 0.5s ease-in-out;
+}
+
 .card-content {
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
@@ -24,13 +30,13 @@
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
+  .cards-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .card {
       height: 200px;
   }
-}
-
-@media (max-width: 768px) {
-  /* .card {
- 
-  } */
 }
