--- a/src/styles/ImageModal.css
+++ b/src/styles/ImageModal.css
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.5) !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,6 +26,23 @@
   background: white;
   padding: 20px;
   outline: none;
+  border-radius: 5px !important;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  background-color: rgb(240, 240, 240) !important;
+}
+
+.slick-arrow {
+    border: none;
+    cursor: pointer;
+}
+
+.slick-next {
+    right: 1%;
+}
+
+.slick-prev {
+    left: 1%;
+    z-index: 999;
 }
 
 .slick-slider img {
