--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,6 +1,10 @@
 .cards-section {
   margin-top: 20px;
   align-items: start;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
@@ -19,14 +23,26 @@
 
 .card:hover {
   transform: scale(1.01);
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .card-content {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  height: 87%;
+  width: 100%;
   padding: 20px;
   text-align: center;
+  transition: opacity 0.2s ease-in-out;
+  
+  border-radius: 5px;
+}
+
+.card-content:hover {
+  opacity: 1;
+  background-color: rgba(230, 230, 230, 0.3);
 }
 
 /* Responsive adjustments */
@@ -35,10 +51,16 @@
     flex-direction: column;
     align-items: center;
     height: 900px;
+    margin: 200px 0;
   }
 
   .card {
       height: 100%;
       width: 100%;
+  }
+
+  .card-content {
+    opacity: 1;
+    background-color: rgba(230, 230, 230, 0.3);
   }
 }
