--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -10,6 +10,7 @@
 
 .gatsby-image-wrapper {
   height: 100%;
+  display: block;
 }
 
 .cover-image {
@@ -20,24 +21,31 @@
 
 .cover-content {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px;
+  top: 5%;
+  left: 5%;
+  text-align: start;
 }
 
 .cover-content h1 {
-  font-size: 3rem;
+  font-size: 10rem;
   margin-bottom: 0.5rem;
 }
 
-.cover-content p {
-  font-size: 1.5rem;
+.cover-content h3 {
+  font-size: 2.5rem;
 }
 
 @media (max-width: 768px) {
   .cover-container {
       min-height: 50vh;
+  }
+
+  .cover-content h1 {
+    font-size: 10rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  .cover-content h3 {
+    font-size: 2.5rem;
   }
 }
