--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -24,6 +24,7 @@
   top: 5%;
   left: 5%;
   text-align: start;
+  max-width: 80%;
 }
 
 .cover-content h1 {
@@ -41,11 +42,11 @@
   }
 
   .cover-content h1 {
-    font-size: 10rem;
+    font-size: 7.5rem;
     margin-bottom: 0.5rem;
   }
   
   .cover-content h3 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
 }
