--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -32,7 +32,7 @@
   margin-bottom: 0.5rem;
 }
 
-.cover-content h3 {
+.cover-content span {
   font-size: 2.5rem;
 }
 
@@ -46,7 +46,7 @@
     margin-bottom: 0.5rem;
   }
   
-  .cover-content h3 {
+  .cover-content span {
     font-size: 2.3rem;
   }
 }
