--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -10,12 +10,21 @@
   flex: 1;
 }
 
+.contact-text {
+  padding-left: 20px;
+}
+
 .contact-map iframe {
   box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
 }
 
 .contact-text h3 {
   font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.contact-text p {
+  font-size: 1.2rem;
   margin-bottom: 0.5rem;
 }
 
@@ -33,6 +42,10 @@
   margin-left: 15px;
 }
 
+a:visited {
+  color: black;
+}
+
 @media (max-width: 768px) {
   .contact-container {
     flex-direction: column;
@@ -40,7 +53,7 @@
 
   .contact-text {
     width: 100%;
-    padding-left: 10px;
+    padding-left: 20px;
   }
 
   .contact-text h3 {
