--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -19,12 +19,20 @@
   object-fit: cover;
 }
 
+.cover-content-init {
+  left: 0%;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
 .cover-content {
   position: absolute;
   top: 5%;
   left: 5%;
+  opacity: 1;
   text-align: start;
   max-width: 80%;
+  transition: all 1.5s ease-in-out;
 }
 
 .cover-content h1 {
