--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -44,6 +44,21 @@
   font-size: 2.5rem;
 }
 
+.cover-content button {
+  padding: 10px;
+  border-radius: 25px;
+  border: 0;
+  cursor: pointer;
+  opacity: 0.85;
+  transition: opacity 0.2s ease-in-out;
+  font-size: 1.1rem;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+}
+
+.cover-content button:hover {
+  opacity: 1;
+}
+
 @media (max-width: 768px) {
   .cover-container {
       min-height: 50vh;
