--- a/src/styles/Cover.css
+++ b/src/styles/Cover.css
@@ -23,16 +23,26 @@
   left: 0%;
   opacity: 0;
   transition: all 1s ease-in-out;
+  height: 100%;
 }
 
 .cover-content {
   position: absolute;
-  top: 5%;
+  top: 0;
   left: 5%;
   opacity: 1;
   text-align: start;
   max-width: 80%;
+  height: 100%;
   transition: all 1.5s ease-in-out;
+}
+
+.cover-content > div {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: -10%;
 }
 
 .cover-content h1 {
