--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,4 +6,12 @@
   z-index: 1000;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar a, .navbar a:visited {
+  color: black;
+  text-decoration: none;
 }
