--- a/src/styles/TechnicalInformation.css
+++ b/src/styles/TechnicalInformation.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-top: 65px;
 
 }
 
@@ -10,6 +11,7 @@
   display: flex;
   justify-content: center;
   width: 80%;
+  max-width: 1000px;
   border: 1px solid lightgray;
   margin: 10px;
   cursor: pointer;
