--- a/src/styles/ImageModal.css
+++ b/src/styles/ImageModal.css
@@ -85,8 +85,9 @@
   cursor: pointer;
   color: white;
   background-color: gray;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
+  box-shadow: 0px 0px 5px 0px black;
 }
 
 @media (max-width: 768px) {
