--- a/src/styles/TechnicalInformationModal.css
+++ b/src/styles/TechnicalInformationModal.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   color: white;
   background-color: gray;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
+  box-shadow: 0px 0px 5px 0px black;
 }
